--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,61 @@ nav {
 .card_content {
   flex-grow: 1;
 }
+
+.cart {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+
+  cursor: pointer;
+  z-index: 5;
+}
+@media (min-width: 767px) {
+  
+}
+
+.cart-quantity {
+
+}
+
+.basket-list{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  background: #fff;
+  width: 50rem;
+  max-width: 95%;
+
+  animation: show 500ms ease-in-out;
+}
+
+.basket-close {
+  position: absolute;
+  cursor: pointer;
+  top: 0.5rem;
+  right: 1.5rem;
+  color: #fff;
+}
+
+.basket-delete {
+  cursor: pointer;
+}
+
+@keyframes show {
+  from {
+    top:70%;
+    opacity: 0
+  }
+  to {
+    top: 50%;
+    opacity: 1;
+  }
+}
+
+.basket-quantity {
+  cursor: pointer;
+  vertical-align: middle;
+  color: #26a69a;
+}
